Fixed some divs; now my mmphoto is not centered

--- a/style.css
+++ b/style.css
@@ -41,11 +41,12 @@ p {
 
 }
 
-.container h1 {
+#topbox h1 {
   color: white;
   font-size: 50px;
   font-weight: bold;
-  margin-bottom: 0;
+  margin-bottom: 0px;
+  text-align: center;
 }
 
 .heading {
@@ -99,12 +100,6 @@ text-align: center;
 /* Helps solve a mobile style bug on some phones */
 html { height: 100%; } 
 body { min-height: 100%; }
-
-
-/* Set the fixed height of the footer here */
-#footer {
-
-}
 
 @media screen and (max-width: 480px) {
     background-image: responsive;
